# tmp

./: .env.example  .gitignore  pyproject.toml
analysis_reports/: fable5_full_ab_audit_code_review_260702.md  fable5_full_ab_audit_code_review_prompt_260702.md  fable5_manifest_provenance_code_review_260702.md  fable5_manifest_provenance_code_review_prompt_260702.md  fable5_manifest_provenance_fix_review_260702.md  fable5_manifest_provenance_fix_review_prompt_260702.md
docs/: config_guide.md  fable_decision_review_stage1_retune12288_b20_260705.md  fable_review_stage1_pair_freeze_audit_260704.md  fable_review_stage1_post_run_audit_260705.md  fable_review_stage1_post_run_response_260705.md  migration_from_pauseprobe_cotpausetoken.md  runpod_setup.md  stage1_paired_8b_remaining_r2_archive_260704.md  stage1_paired_8b_remaining_r2_archive_260704_zh.md  stage1_paired_r2_archive_260703.md  stage1_paired_r2_archive_260703_zh.md  stage1_post_hb_r2_archive_260705.md  (+8 more)
legacy/COTPauseToken/: pyproject.toml
legacy/COTPauseToken/configs/data/: deepseek_pause_sft.yaml
legacy/COTPauseToken/configs/experiment/trl_train/: deepseek_pause_full_sft.yaml
legacy/COTPauseToken/configs/rl_algorithm/policy/model/language_model/: deepseek_r1_distill_qwen_1_5b.yaml
legacy/COTPauseToken/scripts/data_generation/pause_sft/: build_candidate_mix_sft.py  build_intra_think_pause_sft_splits.py  build_trusted_cot_sft.py  hf_generate_sft_shard.py  judge_prometheus_hf_shard.py  judge_prometheus_vllm_shard.py  run_4gpu_hf_judge.sh  run_4gpu_judge.sh  run_4gpu_vllm_generate.sh  run_intra_pause_cot3_data_prep.sh  validate_intra_think_pause_sft_format.py  vllm_generate_sft_shard.py
legacy/COTPauseToken/scripts/training/: run_4gpu_intra_pause_sft.sh
legacy/COTPauseToken/src/: trl_train.py
legacy/COTPauseToken/src/utils/: pause_kl_trainer.py  trainer_utils.py  utils.py
pipelines/: runpod_hot_env.sh  (+25 more)
(+1011 files in other folders)
