[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-safety"
version = "0.1.0"
description = "Config-driven pipelines for CoT pause-token probing, SFT, steering, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "kanbrtkuy"}]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "torch",
  "transformers==4.52.4",
  "datasets>=3.0",
  "accelerate",
  "safetensors",
]

[project.optional-dependencies]
sft = [
  "trl==0.8.1",
  "bitsandbytes==0.46.1",
  "hydra-core>=1.3.2",
  "hydra-colorlog>=1.2.0",
  "omegaconf>=2.3.0",
  "peft>=0.10.0",
  "rich>=13.0",
  "rootutils",
]
judge = [
  "vllm>=0.6.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
cot-safety = "cot_safety.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
